--- a/CobroCoactivo/web/paginas/gestionCargue/gestionCarguePlanoDeudas.xhtml
+++ b/CobroCoactivo/web/paginas/gestionCargue/gestionCarguePlanoDeudas.xhtml
@@ -5,11 +5,18 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:jsf="http://xmlns.jcp.org/jsf"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
     <body>
         <ui:composition template="./../../plantillas/PlantillaGeneral.xhtml">
             <ui:define name="content" >
+                <c:set var="val" value="false"/>
+                <c:forEach items="${loginBean.listRecursos}" var="rec">
+                    <c:if  test="#{rec eq 'gestionCarguePlanoDeudas'}" var="bool">
+                        <c:set var="val" value="true"/>
+                    </c:if>
+                </c:forEach>
                 <div class="content-wrapper">
                     <section class="content-header">
                         <h1>
@@ -162,6 +169,11 @@
                         </h:form>
                     </section>
                 </div>
+                <c:if  test="#{val eq false}">
+                    <script>
+                        document.location.href = 'index2.html';
+                    </script>
+                </c:if>
             </ui:define>
         </ui:composition>
     </body>
