--- a/CobroCoactivo/web/paginas/gestionPlanes/gestionPlanTrabajo.xhtml
+++ b/CobroCoactivo/web/paginas/gestionPlanes/gestionPlanTrabajo.xhtml
@@ -11,6 +11,12 @@
     <body>
         <ui:composition template="./../../plantillas/PlantillaGeneral.xhtml">
             <ui:define name="content">
+                <c:set var="val" value="false"/>
+                <c:forEach items="${loginBean.listRecursos}" var="rec">
+                    <c:if  test="#{rec eq 'gestionPlanTrabajo'}" var="bool">
+                        <c:set var="val" value="true"/>
+                    </c:if>
+                </c:forEach>
                 <div class="content-wrapper">
                     <section class="content-header">
                         <h1>
@@ -336,6 +342,11 @@
                         </h:form>
                     </section>
                 </div>
+                <c:if  test="#{val eq false}">
+                    <script>
+                        document.location.href = 'index2.html';
+                    </script>
+                </c:if>
             </ui:define>
         </ui:composition>
     </body>
