--- a/CobroCoactivo/web/paginas/gestionDeudas/gestionConsultarDeudas.xhtml
+++ b/CobroCoactivo/web/paginas/gestionDeudas/gestionConsultarDeudas.xhtml
@@ -6,12 +6,17 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:jsf="http://xmlns.jcp.org/jsf">
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 
     <body>
         <ui:composition template="./../../plantillas/PlantillaGeneral.xhtml">
             <ui:define name="content">
+                <c:set var="val" value="false"/>
+                <c:forEach items="${loginBean.listRecursos}" var="rec">
+                    <c:if  test="#{rec eq 'gestionConsultarDeudas'}" var="bool">
+                        <c:set var="val" value="true"/>
+                    </c:if>
+                </c:forEach>
                 <h:form id="frmConsultarDeuda">
                     <div class="content-wrapper">
                         <section class="content-header">
@@ -26,7 +31,7 @@
                             </ol>
                         </section>
                         <section class="content">
-                            <p:messages autoUpdate="true" id="mensajeConsultarDeudas" showIcon="true" showDetail="true" closable="true"></p:messages>
+                            <p:messages autoUpdate="true" id="mensajeConsultarDeudas" showSummary="false" showDetail="true" closable="true"></p:messages>
                             <!-- Default box -->
                             <div class="box box-danger">
                                 <div class="box-header with-border">
@@ -71,14 +76,14 @@
                                                                 <label class="control-label align-left">Fecha Inicial</label>
                                                             </div>
                                                             <div class="col-lg-2">
-                                                                <p:calendar value="#{gestionDeudasBean.fechaCargueInicial}" placeholder="Digite fecha" id="fechaCargueInicial" class="form-control pull-right"  pattern="MM/dd/yyyy" >
+                                                                <p:calendar required="true" requiredMessage="Digite la fecha inicial, por favor." value="#{gestionDeudasBean.fechaCargueInicial}" placeholder="Digite fecha" id="fechaCargueInicial" class="form-control pull-right"  pattern="MM/dd/yyyy" >
                                                                 </p:calendar>
                                                             </div>
                                                             <div class="col-lg-1">
                                                                 <label class="control-label align-left">Fecha Final</label>
                                                             </div>
                                                             <div class="col-lg-2">
-                                                                <p:calendar value="#{gestionDeudasBean.fechaCargueFinal}" placeholder="Digite fecha" id="fechaCargueFinal" class="form-control pull-right"  pattern="MM/dd/yyyy"  >
+                                                                <p:calendar required="true" requiredMessage="Digite la fecha final, por favor." value="#{gestionDeudasBean.fechaCargueFinal}" placeholder="Digite fecha" id="fechaCargueFinal" class="form-control pull-right"  pattern="MM/dd/yyyy"  >
                                                                 </p:calendar>
                                                             </div>
 
@@ -86,7 +91,6 @@
                                                                 <h:commandLink class="btn btn-info btn-danger" value="Buscar">
                                                                     <f:ajax event="click" execute="fechaCargueFinal fechaCargueInicial" listener="#{gestionDeudasBean.buscarDeudas(2)}" render="frmConsultarDeuda:pnlTablaDeduasPersonas" onevent="test"></f:ajax>
                                                                 </h:commandLink>
-
                                                             </div>
                                                         </div>
                                                     </div>
@@ -98,28 +102,24 @@
                                                                 <label class="control-label align-left">Fecha Inicial</label>
                                                             </div>
                                                             <div class="col-lg-2">
-                                                                <p:calendar  value="#{gestionDeudasBean.fechaDeudaInicial}" placeholder="Digite fecha" id="fechaDeudaInicial" class="form-control pull-right" pattern="MM/dd/yyyy"/>
+                                                                <p:calendar required="true" requiredMessage="Digite la fecha inicial, por favor." value="#{gestionDeudasBean.fechaDeudaInicial}" placeholder="Digite fecha" id="fechaDeudaInicial" class="form-control pull-right" pattern="MM/dd/yyyy"/>
                                                             </div>
                                                             <div class="col-lg-1">
                                                                 <label class="control-label align-left">Fecha Final</label>
                                                             </div>
                                                             <div class="col-lg-2">
-                                                                <p:calendar  value="#{gestionDeudasBean.fechaDeudaFinal}" placeholder="Digite fecha" id="fechaDeudaFinal" class="form-control pull-right" pattern="MM/dd/yyyy"/>
+                                                                <p:calendar required="true" requiredMessage="Digite la fecha final, por favor." value="#{gestionDeudasBean.fechaDeudaFinal}" placeholder="Digite fecha" id="fechaDeudaFinal" class="form-control pull-right" pattern="MM/dd/yyyy"/>
                                                             </div>
                                                             <div class="col-lg-2">
                                                                 <h:commandLink class="btn btn-info btn-danger" value="Buscar">
                                                                     <f:ajax event="click" execute="fechaDeudaFinal fechaDeudaInicial" listener="#{gestionDeudasBean.buscarDeudas(3)}" render="frmConsultarDeuda:pnlTablaDeduasPersonas" onevent="test"></f:ajax>
                                                                 </h:commandLink>
-
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <!-- /.tab-content -->
                                             </div>
-                                            <!-- nav-tabs-custom -->
                                         </div>
-                                        <!-- /.col -->
                                     </div>
                                 </div>
                                 <h:panelGroup  id="pnlTablaDeduasPersonas">
@@ -170,6 +170,11 @@
                         </section>
                     </div>
                 </h:form>
+                <c:if  test="#{val eq false}">
+                    <script>
+                        document.location.href = 'index2.html';
+                    </script>
+                </c:if>
             </ui:define>
         </ui:composition>
     </body>
