--- a/CobroCoactivo/web/paginas/gestionExcepciones/gestionExcepciones.xhtml
+++ b/CobroCoactivo/web/paginas/gestionExcepciones/gestionExcepciones.xhtml
@@ -10,6 +10,12 @@
     <body>
         <ui:composition template="./../../plantillas/PlantillaGeneral.xhtml">
             <ui:define name="content">
+                <c:set var="val" value="false"/>
+                <c:forEach items="${loginBean.listRecursos}" var="rec">
+                    <c:if  test="#{rec eq 'gestionExcepciones'}" var="bool">
+                        <c:set var="val" value="true"/>
+                    </c:if>
+                </c:forEach>
                 <h:form id="frmExcepciones">
                     <div class="content-wrapper">
                         <section class="content-header">
@@ -95,6 +101,11 @@
                         </h:commandLink>
                     </div>                    
                 </h:form>
+                <c:if  test="#{val eq false}">
+                    <script>
+                        document.location.href = 'index2.html';
+                    </script>
+                </c:if>
             </ui:define>
         </ui:composition>
     </body>
