--- a/CobroCoactivo/web/paginas/gestionExpedientes/recibirExpedientes.xhtml
+++ b/CobroCoactivo/web/paginas/gestionExpedientes/recibirExpedientes.xhtml
@@ -5,7 +5,8 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:jsf="http://xmlns.jcp.org/jsf">
+      xmlns:jsf="http://xmlns.jcp.org/jsf"
+      xmlns:p="http://primefaces.org/ui">
     <h:body onload="table()">
         <ui:composition template="./../../plantillas/PlantillaGeneral.xhtml">
             <ui:define name="content">
@@ -23,6 +24,7 @@
                             </ol>
                         </section>
                         <section class="content">
+                            <p:messages closable="true" autoUpdate="true" id="messageGeneral" showDetail="true"/>
                             <div class="box box-danger">
                                 <div class="box-body">
                                     <table id="dataTableDetalle" class="table table-hover">
